--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -38,7 +38,7 @@
   <div class="row">
     <div class="col-lg-8 col-md-8 col-sm-12">
       <h2>Mars Facts</h2>        
-      {{ mars.mars_facts}}                
+      {{ mars.mars_facts | safe}}                
     </div>
   </div>
 </div>
